chore: update database connection and rename tables to avoid SQL reserved keywords
- Configured database connection in `application.properties` for PostgreSQL.
- Renamed `User` entity to `user_nova` to avoid conflict with SQL reserved keywords.
- Renamed `Order` entity to `order_nova` for the same reason.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=NovaInvest
+spring.datasource.url=jdbc:postgresql://localhost:5432/nova-invest
+spring.datasource.username=postgres
+spring.datasource.password=Indi-Jons12pg
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+security.basic.enabled=false
