eat: add support for fetching data for multiple asset types (stocks, commodities, ETFs)
- Updated `MarketDataService` to dynamically fetch data based on asset type.
- Modified `MarketController` to include an optional `assetType` parameter.
- Extended `StockDto` to support additional fields for commodities and ETFs.
- Added dynamic endpoint resolution for stocks, commodities, and ETFs.
- Updated endpoints to handle single and multiple asset data requests.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=Indi-Jons12pg
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 security.basic.enabled=false
+
+//YahooFinanceAPI
+yahoo.api.base-url=https://apidojo-yahoo-finance-v1.p.rapidapi.com/stock/v2/
+yahoo.api.key=e9111cbf56msh8dd73ce0252a1c5p1fec40jsn01d390ff28de
+yahoo.api.host=yahoo-finance166.p.rapidapi.com
