feat: implement Yahoo Finance API call to retrieve asset price - **Created/modified classes to enable integration with Yahoo Finance API:**   - **`application.properties`**: Added configuration properties for Yahoo Finance API base URL and endpoints.   - **`AssetController.java`**: Added an endpoint to fetch asset price by symbol and region.   - **`AssetService.java`**: Added service method to handle API call logic and return asset price.   - **`CommonHeadersYahooFinance.java`**: Implemented utility class to generate HTTP headers for Yahoo Finance API.   - **`GetRealTimeDataCall.java`**: Created service to construct and execute API requests.   - **`Investment.java`**: Extended model to support Yahoo Finance data mapping.   - **`InvestmentService.java`**: Integrated Yahoo Finance data retrieval with existing investment logic.   - **`QuoteSummary.java`, `Result.java`, `Price.java`, `RegularMarketOpen.java`**: Defined DTOs to map API response structure.   - **`YahooFinanceResponseDto.java`**: Root DTO for parsing API response.   - **`YahooFinanceService.java`**: Encapsulated logic to delegate Yahoo Finance API calls. - **Enabled retrieval of `regularMarketOpen` price for a specific asset based on region and symbol.** - **Tested endpoint via Postman and ensured correct deserialization of API response.**

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 security.basic.enabled=false
 
 //YahooFinanceAPI
-yahoo.api.base-url=https://apidojo-yahoo-finance-v1.p.rapidapi.com/stock/v2/
+yahoo.api.base-url=https://yahoo-finance166.p.rapidapi.com/api
+yahoo.api.stock-get-price=/stock/get-price
 yahoo.api.key=e9111cbf56msh8dd73ce0252a1c5p1fec40jsn01d390ff28de
 yahoo.api.host=yahoo-finance166.p.rapidapi.com
