add  Datasource properties for Railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/nova-invest
-spring.datasource.username=postgres
-spring.datasource.password=Indi-Jons12pg
+# Datasource properties for Railway
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-security.basic.enabled=false
 
 //YahooFinanceAPI
 yahoo.api.base-url=https://yahoo-finance166.p.rapidapi.com/api
