modify url for database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Datasource properties for Railway
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=jdbc:postgresql://interchange.proxy.rlwy.net:43931/railway
+spring.datasource.username=postgres
+spring.datasource.password=iBjtxFFXZYETDoLJGrPfqrvUrzidPKIb
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
