modify url for database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Datasource properties for Railway
-spring.datasource.url=jdbc:postgresql://interchange.proxy.rlwy.net:43931/railway
+spring.datasource.url=jdbc:postgresql://interchange.proxy.rlwy.net:43931/railway?sslmode=require
 spring.datasource.username=postgres
 spring.datasource.password=iBjtxFFXZYETDoLJGrPfqrvUrzidPKIb
 spring.datasource.driver-class-name=org.postgresql.Driver
