--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Datasource properties for Railway
-spring.datasource.url=jdbc:postgresql://interchange.proxy.rlwy.net:43931/railway?sslmode=require
+spring.datasource.url=jdbc:postgresql://interchange.proxy.rlwy.net:43931/railway
 spring.datasource.username=postgres
 spring.datasource.password=iBjtxFFXZYETDoLJGrPfqrvUrzidPKIb
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Hibernate settings
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Recommended additional settings
+spring.datasource.hikari.maximum-pool-size=5
+spring.jpa.show-sql=true
 
 //YahooFinanceAPI
 yahoo.api.base-url=https://yahoo-finance166.p.rapidapi.com/api
