--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,8 @@ spring.datasource.password=iBjtxFFXZYETDoLJGrPfqrvUrzidPKIb
 spring.jpa.hibernate.ddl-auto=update
 
 # Recommended additional settings
-spring.datasource.hikari.maximum-pool-size=2
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.idle-timeout=5000
-spring.datasource.hikari.connection-timeout=15000
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.main.lazy-initialization=true
+spring.jpa.show-sql=true
+
 
 
