--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,11 @@
 # Datasource properties for Railway
-spring.datasource.url=jdbc:postgresql://interchange.proxy.rlwy.net:43931/railway
-spring.datasource.username=postgres
-spring.datasource.password=iBjtxFFXZYETDoLJGrPfqrvUrzidPKIb
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
-
-# Recommended additional settings
-spring.datasource.hikari.maximum-pool-size=2
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.idle-timeout=5000
-spring.datasource.hikari.connection-timeout=15000
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
 
 //YahooFinanceAPI
 yahoo.api.base-url=https://yahoo-finance166.p.rapidapi.com/api
 yahoo.api.stock-get-price=/stock/get-price
-yahoo.api.key=e9111cbf56msh8dd73ce0252a1c5p1fec40jsn01d390ff28de
+yahoo.api.key=${API_KEY}
 yahoo.api.host=yahoo-finance166.p.rapidapi.com
